# kompas-core

./: CMakeLists.txt  PKGBUILD
debian/: changelog  control  kompas-core-dev.install
doc/: Brainstorming.dox  MainPage.dox  RoadMap.dox  TileArchiveFormat.dox  namespaces.dox
modules/: CMakeLists.txt  FindKompasCore.cmake  FindMap2XCore.cmake
package/archlinux/kompas-core/: .gitignore  PKGBUILD
package/archlinux/kompas-core-git/: PKGBUILD
package/debian/: changelog  control  copyright  kompas-core-dev.install
package/debian-obs/: debian.kompas-core-dev.install  debian.kompas-core.install  kompas-core.dsc
package/rpm/: kompas-core.changes  kompas-core.spec
src/: AbsoluteArea.h  AbstractCache.cpp  AbstractCache.h  AbstractCelestialBody.cpp  AbstractCelestialBody.h  AbstractMercatorTileModel.cpp  AbstractMercatorTileModel.h  AbstractNetworkCache.h  AbstractProjection.h  AbstractRasterModel.cpp  AbstractRasterModel.h  AbstractTileModel.cpp  AbstractTileModel.h  Area.h  CMakeLists.txt  Coords.h  LatLonCoords.cpp  LatLonCoords.h  RasterCoords.h  TileArchiveReader.cpp  TileArchiveReader.h  TranslatablePlugin.h  Wgs84Coords.cpp  Wgs84Coords.h  basictypes.h  constants.h  utilities.h
src/Plugins/: CMakeLists.txt  OpenStreetMapTileModel.cpp  OpenStreetMapTileModel.h  registerStatic.cpp
src/Plugins/EarthCelestialBody/: CMakeLists.txt  EarthCelestialBody.conf  EarthCelestialBody.cpp  EarthCelestialBody.h
src/Plugins/EarthCelestialBody/Test/: CMakeLists.txt  EarthCelestialBodyTest.cpp  EarthCelestialBodyTest.h
src/Plugins/KompasRasterModel/: CMakeLists.txt  KompasRasterArchiveMaker.cpp  KompasRasterArchiveMaker.h  KompasRasterArchiveReader.cpp  KompasRasterArchiveReader.h  KompasRasterModel.conf  KompasRasterModel.cpp  KompasRasterModel.h
src/Plugins/KompasRasterModel/Test/: CMakeLists.txt  KompasMultiRasterModelTest.cpp  KompasMultiRasterModelTest.h  KompasRasterArchiveTest.cpp  KompasRasterArchiveTest.h  KompasRasterModelTest.cpp  KompasRasterModelTest.h  testConfigure.h.cmake
src/Plugins/KompasRasterModel/Test/KompasRasterArchiveTestFiles/: version2.kps
src/Plugins/KompasRasterModel/Test/KompasRasterModelTestFiles/: map.conf.different1  map.conf.expected  map.conf.smallZoom
src/Plugins/KompasRasterModel/Test/KompasRasterModelTestFiles/big/: map.conf
src/Plugins/KompasRasterModel/Test/KompasRasterModelTestFiles/big/base/: 2.map
src/Plugins/KompasRasterModel/Test/KompasRasterModelTestFiles/small/: map.conf
src/Plugins/KompasRasterModel/Test/KompasRasterModelTestFiles/small/base/: 2.map  3-1.kps  3.kps
src/Plugins/KompasRasterModel/doc/: KompasRasterArchive.dox
src/Plugins/Map2XRasterModel/: CMakeLists.txt  Map2XRasterArchiveMaker.cpp  Map2XRasterArchiveMaker.h  Map2XRasterArchiveReader.cpp  Map2XRasterArchiveReader.h  Map2XRasterModel.conf  Map2XRasterModel.cpp  Map2XRasterModel.h
src/Plugins/Map2XRasterModel/Test/: CMakeLists.txt  Map2XMultiRasterModelTest.cpp  Map2XMultiRasterModelTest.h  Map2XRasterArchiveTest.cpp  Map2XRasterArchiveTest.h  Map2XRasterArchiveTestConfigure.h.cmake  Map2XRasterModelTest.cpp  Map2XRasterModelTest.h  Map2XRasterModelTestConfigure.h.cmake  testConfigure.h.cmake
src/Plugins/Map2XRasterModel/Test/Map2XRasterArchiveTestFiles/: version3.map
src/Plugins/Map2XRasterModel/Test/Map2XRasterModelTestFiles/: map.conf.different1  map.conf.different2  map.conf.expected  map.conf.smallZoom
src/Plugins/Map2XRasterModel/Test/Map2XRasterModelTestFiles/big/: map.conf
src/Plugins/Map2XRasterModel/Test/Map2XRasterModelTestFiles/small/: map.conf
src/Plugins/Map2XRasterModel/Test/Map2XRasterModelTestFiles/small/base/: 3-1.map
src/Plugins/Map2XRasterModel/Test/Map2XRasterModelTestFiles/small/relief/: 2.map
src/Plugins/Map2XRasterModel/doc/: Map2XRasterArchive.dox
src/Plugins/MercatorProjection/: CMakeLists.txt  MercatorProjection.conf  MercatorProjection.cpp  MercatorProjection.h
src/Plugins/MercatorProjection/Test/: CMakeLists.txt  MercatorProjectionTest.cpp  MercatorProjectionTest.h
src/Plugins/OpenStreetMapRasterModel/: CMakeLists.txt  OpenStreetMapRasterModel.conf  OpenStreetMapRasterModel.cpp  OpenStreetMapRasterModel.h
src/Plugins/OpenStreetMapTileModel/: CMakeLists.txt  OpenStreetMapTileModel.conf  OpenStreetMapTileModel.cpp  OpenStreetMapTileModel.h
src/Plugins/Test/: CMakeLists.txt  OpenStreetMapTileModelTest.cpp  OpenStreetMapTileModelTest.h
src/Test/: AbsoluteAreaTest.cpp  AbsoluteAreaTest.h  AbstractMercatorTileModelTest.cpp  AbstractMercatorTileModelTest.h  AbstractRasterModelTest.cpp  AbstractRasterModelTest.h  AreaTest.cpp  AreaTest.h  CMakeLists.txt  CoordsTest.cpp  CoordsTest.h  DummyMercatorTileModel.h  LatLonCoordsTest.cpp  LatLonCoordsTest.h  TileArchiveTest.cpp  TileArchiveTest.h  TileArchiveTestConfigure.h.cmake  Wgs84CoordsTest.cpp  Wgs84CoordsTest.h
src/Test/TileArchiveTestFiles/: version2.map
tests/: CMakeLists.txt
